<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/sincronizacion">
        <CheckBoxPreference
            android:key="prefSincronizar"
            android:title="@string/sincronizar"
            android:summary="@string/sincronizar_detalle"
            android:defaultValue="true" />
        <ListPreference
            android:dependency="prefSincronizar"
            android:key="prefTipoConexion"
            android:title="@string/tipo_conexion"
            android:dialogTitle="@string/tipo_conexion"
            android:entries="@array/tipo_conexion_entries"
            android:entryValues="@array/tipo_conexion_values"
            android:defaultValue="@string/tipo_conexion_default" />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/apariencia">
        <CheckBoxPreference
            android:key="prefLetrasGrandes"
            android:title="@string/letras_grandes"
            android:summary="@string/letras_grandes_detalle"
            android:defaultValue="false" />
        <MultiSelectListPreference
            android:key="prefTurnos"
            android:title="@string/turnos"
            android:dialogTitle="@string/turnos"
            android:summary="@string/turnos_detalle"
            android:entries="@array/turnos_entries"
            android:entryValues="@array/turnos_values"
            android:defaultValue="@array/turnos_default" />
        <Preference
            android:title="@string/prefWeb">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="http://www.iessaladillo.es" />
        </Preference>

        <PreferenceScreen
            android:title="@string/otras">
            <EditTextPreference
                android:key="prefLema"
                android:title="@string/lema"
                android:summary="@string/lema_detalle"
                android:dialogTitle="@string/lema" />
            <RingtonePreference
                android:key="prefTonoNotificacion"
                android:ringtoneType="notification"
                android:title="@string/tono_notificacion"
                android:showDefault="true"
                android:showSilent="true"
                android:defaultValue="content://settings/system/notification_sound" />
            <SwitchPreference
                android:key="prefRed"
                android:summaryOff="@string/red_detalle_off"
                android:summaryOn="@string/red_detalle_on"
                android:switchTextOff="@string/no"
                android:switchTextOn="@string/si"
                android:title="@string/red" />

        </PreferenceScreen>
    </PreferenceCategory>
</PreferenceScreen>